Liquibase & DB schema & Services [+] - add liquibase support for db structure changes [+] - add choosing services [-] - remove spring security (will be added later, when web panel will be ready) [-] - remove spring actuator web panel